--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -63,8 +63,8 @@
 	--color-canvas-background: var(--prim-gray-10);
 
 	// Sticky
-	--color-sticky-default-background: var(--prim-color-alt-d-tint-100);
-	--color-sticky-default-border: var(--prim-color-alt-d);
+	--color-sticky-default-background: var(--prim-color-alt-d);
+	--color-sticky-default-border: var(--prim-color-alt-d-shade-150);
 
 	// Expressions
 	--color-valid-resolvable-foreground: var(--prim-color-alt-a);
